--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
+title: VarelaMar Website
+description: My GitHub Pages site with Cayman theme
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-
