--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: VarelaMar Website
+description: Intercultural Communication and Hypertext
+theme: jekyll-theme-cayman
+
 include:
   - home.html
-  - assets/
+  - assets
