--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: VarelaMar Website
 description: Intercultural Communication and Hypertext
 remote_theme: pages-themes/cayman@v0.2.0
 include:
-  - home.html
+  - index.html
   - glossary.html
   - rhetoric.html
   - workcited.html
