--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: VarelaMar Website
-description: Intercultural Communication and Hypertext
+description: Marisa Varela Portfolio
 remote_theme: pages-themes/cayman@v0.2.0
 include:
   - index.html
