--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Marisa Varela Portfolio
 remote_theme: pages-themes/cayman@v0.2.0
 include:
   - index.html
-  - glossary.html
+  - resume.html
   - rhetoric.html
   - workcited.html
   - assets
