--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ include:
   - workcited.html
   - assets
   - digitalliteracyandrhetoric.html
-  - cultureandtranslation.html
+  - writing Samples.html
