--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,5 @@ include:
   - rhetoric.html
   - workcited.html
   - assets
-  - digitalliteracyandrhetoric.html
+  - academicWriting.html
   - writing Samples.html
