--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ include:
   - index.html
   - resume.html
   - publishedWorks.html
-  - workcited.html
+  - infographics.html
   - assets
   - academicWriting.html
   - writing Samples.html
